--- a/.github/workflows/update_translation.yml
+++ b/.github/workflows/update_translation.yml
@@ -12,7 +12,10 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-
+      
+      - name: Set execution permissions for the script
+        run: chmod +x ./.github/workflows/scripts/update_translation.sh
+        
       - name: Update Base Translation
         run: ./.github/workflows/scripts/update_translation.sh
 
