--- a/.github/workflows/update_translation.yml
+++ b/.github/workflows/update_translation.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install xmlstarlet
+        run: sudo apt-get install -y xmlstarlet
+        
       - name: Set execution permissions for the script
         run: chmod +x ./.github/workflows/scripts/update_translation.sh
 
