--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,16 @@
 
 name: Build and Release
 
-on: [push, pull_request]
-
+on:
+  push:
+    branches:
+      - '*'
+      - '!l10n_main2'
+  pull_request:
+    branches:
+      - '*'
+      - '!l10n_main2'
+      
 concurrency:
   group: ci-${{ github.event_name }}-${{ github.ref }}
   cancel-in-progress: ${{ github.event_name == 'push' }}
