--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,15 @@
 
 name: Build and Release
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - '*'
+      - '!l10n_main2'
+  pull_request:
+    branches:
+      - '*'
+      - '!l10n_main2'
 
 concurrency:
   group: ci-${{ github.event_name }}-${{ github.ref }}
