--- a/.github/workflows/update_translation.yml
+++ b/.github/workflows/update_translation.yml
@@ -25,6 +25,8 @@ jobs:
           token: ${{ secrets.SHADPS4_TOKEN_REPO }}
           title: "Qt GUI: Update Translation"
           commit-message: "[ci skip] Qt GUI: Update Translation."
+          committer: "shadPS4 Bot <Shadps4Boot@users.noreply.github.com>"
+          author: "shadPS4 Bot <Shadps4Boot@users.noreply.github.com>"
           body: "Daily update of translation sources."
           branch: update-translation
           delete-branch: true
